<resources>
    <string name="app_name">LoginApp</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">Welcome</string>
    <string name="invalid_username">Not a valid email</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="invalid_confirm_password">Password not match</string>
    <string name="login_failed">"Login failed"</string>
    <string name="welcome_to_login">Welcome To Login</string>
    <string name="login">Login</string>
    <string name="image">This is an Image</string>
</resources>